@@ -1,1 +1,1 @@
-3.5.6
+3.5.6 beta
