@@ -1,3 +1,9 @@
+2000-12-22  Mike Welles <mike@bangstate.com> 
+        * added link to CVS mirror from index.html
+	
+	* updated html/internals.html to note that LZW compression is 
+	  not supported by default. 
+	
 2000-12-22  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* updated html/libtiff.html to not point at Niles' old JPL web site
@@ -9,7 +15,7 @@
 	Leonard Rosenthol <leonardr@lazerware.com>.  May interfere
 	with correct building on older systems.  If so, please let me know.
 
-2000-12-19 Mike Welles <mike@bangsate.com>   *** 3.5.6 release ***
+2000-12-19 Mike Welles <mike@bangsate.com>   
 
 	* Took out LZW Encoding from tif_lzw.c 
 
